Versión tablet header

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 			<img class="col-s-2" id='logo' src="images/logo.png">
 			<h1 class='col-s-5' id='head-title'>Travelust</h1>
-			<nav class='col-s-4' id='log-sign-frm'>
-				<button class="" id='sign-btn'>Sign up</button>
-				<button class="col-s-10" id='log-btn'>Log in</button>
+			<nav class='col-s-5' id='log-sign-frm'>
+				<button class="col-t-5" id='sign-btn'>Sign up</button>
+				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 			</nav>
 		</div>	
-		<nav class='col-s-5' id='nav-header-menu'>
+		<nav class='col-s-5 col-t-12' id='nav-header-menu'>
 			<a href="#">Home</a>
 			<a href="">About</a>
 			<a href="">Experiences</a>
@@ -30,6 +30,10 @@
 			<nav id='log-sign-in-menu'>
 				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
+			</nav>
+			<nav id='search-bar'>
+				<input type="text" name="search-input">
+				<img id='search-lupa' src="images/search_lupa.png">
 			</nav>		
 		</nav>
 	</header>
