--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header>
-		<div id='header-main'>
+		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 			<img class="col-s-2" id='logo' src="images/logo.png">
 			<h1 class='col-s-5' id='head-title'>Travelust</h1>
@@ -21,7 +21,7 @@
 				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 			</nav>
 		</div>	
-		<nav class='col-s-5 col-t-12' id='nav-header-menu'>
+		<nav class='col-s-5 col-t-10' id='nav-header-menu'>
 			<a href="#">Home</a>
 			<a href="">About</a>
 			<a href="">Experiences</a>
@@ -31,11 +31,11 @@
 				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
 			</nav>
-			<nav id='search-bar'>
-				<input type="text" name="search-input">
-				<img id='search-lupa' src="images/search_lupa.png">
-			</nav>		
 		</nav>
+		<nav id='search-bar'>
+			<input type="text" name="search-input">
+			<img id='search-lupa' src="images/search_lupa.png">
+		</nav>	
 	</header>
 	<section>
 	</section>
