--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Travelust</title>
 </head>
 <body>
-	<header>
+	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 			<img class="col-s-2" id='logo' src="images/logo.png">
@@ -38,7 +38,26 @@
 		</nav>	
 	</header>
 	<section>
+		<p>khkshkhkjsh</p>
 	</section>
+
+	<footer class="clearfix">
+		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
+			<img id='footer-logo' src="images/logo.png">
+			<h1 class='col-s-5' id='footer-title'>Travelust</h1>
+		</div>
+
+		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
+			<p id="footer c">© 2021 Travelust</p>
+			<p id="privacy button">Privacy policy</p>
+		</div>
+
+		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
+			<img class="images-app" src="images/youtube%202.png">
+			<img class=" images-app" src="images/twitter%201.png">
+			<img class="images-app" src="images/instagram%202.png">
+		</div>
+	</footer>
 
 </body>
 <script src="script/index.js"></script>
