--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<header>
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
-			<img class="col-s-2" id='logo' src="images/logo.png">
-			<h1 class='col-s-5' id='head-title'>Travelust</h1>
-			<nav class='col-s-5' id='log-sign-frm'>
+			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
+			<h1 class='col-s-5 col-6' id='head-title'>Travelust</h1>
+			<nav class='col-s-5 col-3' id='log-sign-frm'>
 				<button class="col-t-5" id='sign-btn'>Sign up</button>
 				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 			</nav>
 		</div>	
-		<nav class='col-s-5 col-t-10' id='nav-header-menu'>
+		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
 			<a href="#">Home</a>
 			<a href="">About</a>
 			<a href="">Experiences</a>
@@ -32,8 +32,8 @@
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
 			</nav>
 		</nav>
-		<nav id='search-bar'>
-			<input type="text" name="search-input">
+		<nav id='search-bar' class='col-t-3 col-4'>
+			<input type="text" id='search-input' name="search-input">
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>	
 	</header>
