--- a/experience.html
+++ b/experience.html
@@ -7,10 +7,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style/index.css">
+	<link rel="stylesheet" href="style/experience.css">
 	<title>Travelust</title>
 </head>
 <body>
+	<!-- HEADER -->
 	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
@@ -37,10 +38,56 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>	
 	</header>
+	<!-- MAIN SECTION -->
 	<section>
-		<p>khkshkhkjsh</p>
+		<h1> Trip to the Cies Islands - Vigo </h1>
+		<img src="">
+		<div id='interests'></div>
+		<article id='location-budget'>
+			<h3>Location:</h3>
+			<h3>Approximate budge:</h3>
+		</article>
+		<article id=description>
+			<p>kijdsfñjsdñfjsdfjsdjfspdijfpñj</p>
+		</article>
+		<section>
+			<article class="images">
+	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
+	            <div>
+	              <img id='img1' class="ex-img col-s-5" src="" alt="">
+	              <img id='img2' class="ex-img col-s-5" src="" alt="">
+	              <img id='img3' class="ex-img col-s-5" src="" alt="">
+	              <img id='img4' class="ex-img col-s-5" src="" alt="">
+	              <img id='img5' class="ex-img col-s-5" src="" alt="">
+	            </div>
+	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
+	        </article>
+	        <article id="videos">
+		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
+		        <div>
+			        <iframe id="vid1" src=""></iframe>
+			        <iframe id="vid2" src=""></iframe>
+			        <iframe id="vid3" src=""></iframe>
+			        <iframe id="vid4" src=""></iframe>
+			        <iframe id="vid5" src=""></iframe>
+		        </div>
+		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
+	      	</article>
+        </section>
+        <article>
+        	<div>
+        		<div>
+        			<input type="text" name="comments">
+        			<img src="" alt="send comment">
+        		</div>
+        		<div>
+        			<h4></h4>
+        			<img src="" alt="like heart">
+        		</div>
+        	</div>
+        </article>
 	</section>
-
+	<!-- FOOTER -->
 	<footer class="clearfix">
 		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
 			<img id='footer-logo' src="images/logo.png">
