Móvil experience html

--- a/experience.html
+++ b/experience.html
@@ -41,50 +41,57 @@
 	<!-- MAIN SECTION -->
 	<section>
 		<h1> Trip to the Cies Islands - Vigo </h1>
-		<img src="">
-		<div id='interests'></div>
+		<img class="col-s-12" src="images/cies main img.png">
+		<div id='interests'>
+			<div class="interest"><p>Islands</p></div>
+			<div class="interest"><p>Beach</p></div>
+			
+		</div>
 		<article id='location-budget'>
-			<h3>Location:</h3>
-			<h3>Approximate budge:</h3>
+			<h3>Location: Vigo - Spain</h3>
+			<h3>Approximate budge: 50€</h3>
 		</article>
 		<article id=description>
-			<p>kijdsfñjsdñfjsdfjsdjfspdijfpñj</p>
+			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
+			<br>
+			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
 		</article>
 		<section>
-			<article class="images">
-	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
-	            <div>
-	              <img id='img1' class="ex-img col-s-5" src="" alt="">
-	              <img id='img2' class="ex-img col-s-5" src="" alt="">
-	              <img id='img3' class="ex-img col-s-5" src="" alt="">
-	              <img id='img4' class="ex-img col-s-5" src="" alt="">
-	              <img id='img5' class="ex-img col-s-5" src="" alt="">
+			<article id="images">
+	            <button type="button" class="arrow-img arr-right col-s-2"><img src="images/left-arrow.png" alt=""></button>
+	            <div class="col-s-8">
+	              <img id='img1' class="obj1 ex-img col-s-12" src="images/cies_pic_1.png" alt="">
+	              <img id='img2' class="obj2 ex-img col-s-12" src="images/cies_pic_2.png" alt="">
+	              <img id='img3' class="obj3 ex-img col-s-12" src="images/cies_pic_3.png" alt="">
+	              <img id='img4' class="obj4 ex-img col-s-12" src="images/cies_pic_4.png" alt="">
+	              <img id='img5' class="obj5 ex-img col-s-12" src="images/cies_pic_5.png" alt="">
 	            </div>
-	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
+	            <button type="button" class="arrow-img arr-left col-s-2"><img src="images/right-arrow.png" alt=""></button>
 	        </article>
 	        <article id="videos">
 		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 		        <div>
-			        <iframe id="vid1" src=""></iframe>
-			        <iframe id="vid2" src=""></iframe>
-			        <iframe id="vid3" src=""></iframe>
-			        <iframe id="vid4" src=""></iframe>
-			        <iframe id="vid5" src=""></iframe>
+			        <iframe id="vid1" class="obj1" src=""></iframe>
+			        <iframe id="vid2" class="obj2" src=""></iframe>
+			        <iframe id="vid3" class="obj3" src=""></iframe>
+			        <iframe id="vid4" class="obj4" src=""></iframe>
+			        <iframe id="vid5" class="obj5" src=""></iframe>
 		        </div>
 		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	      	</article>
         </section>
         <article>
-        	<div>
-        		<div>
-        			<input type="text" name="comments">
-        			<img src="" alt="send comment">
+        	<div id="likes-coms">
+        		<div id="comment-frm" class="col-s-9">
+        			<input id='comment-input' type="text" class='col-s-9' name="comments">
+        			<img id="send-btn" src="images/send.png" class='col-s-1' alt="send comment">
         		</div>
-        		<div>
-        			<h4></h4>
-        			<img src="" alt="like heart">
+        		<div id='like-frm' class='col-s-2'>
+        			<h4>14</h4>
+        			<img id="like-img" src="images/like.png" alt="like heart">
         		</div>
         	</div>
+        	<button>See comments</button>
         </article>
 	</section>
 	<!-- FOOTER -->
