--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,800;1,400;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/experience.css">
 	<title>Travelust</title>
 </head>
@@ -39,60 +39,61 @@
 		</nav>	
 	</header>
 	<!-- MAIN SECTION -->
-	<section>
+	<section id=main-sect>
 		<h1> Trip to the Cies Islands - Vigo </h1>
-		<img class="col-s-12" src="images/cies main img.png">
-		<div id='interests'>
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/cies main img.png">
+		<div id='interests' class="col-s-12 col-t-11 col-9">
 			<div class="interest"><p>Islands</p></div>
 			<div class="interest"><p>Beach</p></div>
-			
 		</div>
-		<article id='location-budget'>
+		<article id='location-budget' class="col-s-12 col-t-11 col-8">
 			<h3>Location: Vigo - Spain</h3>
-			<h3>Approximate budge: 50€</h3>
+			<h3>Approximate budget: 50€</h3>
 		</article>
-		<article id=description>
+		<article id=description class='col-s-11 col-t-10 col-8'>
 			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
 			<br>
 			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
 		</article>
-		<section>
+		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
-	            <button type="button" class="arrow-img arr-right col-s-2"><img src="images/left-arrow.png" alt=""></button>
-	            <div class="col-s-8">
-	              <img id='img1' class="obj1 ex-img col-s-12" src="images/cies_pic_1.png" alt="">
-	              <img id='img2' class="obj2 ex-img col-s-12" src="images/cies_pic_2.png" alt="">
-	              <img id='img3' class="obj3 ex-img col-s-12" src="images/cies_pic_3.png" alt="">
-	              <img id='img4' class="obj4 ex-img col-s-12" src="images/cies_pic_4.png" alt="">
-	              <img id='img5' class="obj5 ex-img col-s-12" src="images/cies_pic_5.png" alt="">
+	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
+	            <div class="col-s-8 col-t-9 col-10">
+	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/cies_pic_1.png" alt="">
+	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/cies_pic_2.png" alt="">
+	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/cies_pic_3.png" alt="">
+	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/cies_pic_4.png" alt="">
+	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/cies_pic_5.png" alt="">
 	            </div>
-	            <button type="button" class="arrow-img arr-left col-s-2"><img src="images/right-arrow.png" alt=""></button>
+	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	        </article>
 	        <article id="videos">
 		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 		        <div>
+		        	<!--
 			        <iframe id="vid1" class="obj1" src=""></iframe>
 			        <iframe id="vid2" class="obj2" src=""></iframe>
 			        <iframe id="vid3" class="obj3" src=""></iframe>
 			        <iframe id="vid4" class="obj4" src=""></iframe>
 			        <iframe id="vid5" class="obj5" src=""></iframe>
+			    	-->
 		        </div>
 		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	      	</article>
         </section>
-        <article>
-        	<div id="likes-coms">
+        <section id="bottom-sect" class="col-s-12">
+        	<article id="likes-coms" class="col-s-11">
         		<div id="comment-frm" class="col-s-9">
         			<input id='comment-input' type="text" class='col-s-9' name="comments">
-        			<img id="send-btn" src="images/send.png" class='col-s-1' alt="send comment">
+        			<img id="send-btn" src="images/send.png"  alt="send comment">
         		</div>
         		<div id='like-frm' class='col-s-2'>
         			<h4>14</h4>
         			<img id="like-img" src="images/like.png" alt="like heart">
         		</div>
-        	</div>
-        	<button>See comments</button>
-        </article>
+        	</article>
+        	<button id="see-comments" class="col-s-6 col-t-4 col-3">See comments</button>
+        </section>
 	</section>
 	<!-- FOOTER -->
 	<footer class="clearfix">
