Top Users móvil y tablet

--- a/last_experiences.html
+++ b/last_experiences.html
@@ -22,9 +22,9 @@
 			</nav>
 		</div>	
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
-			<a href="#">Home</a>
+			<a href="index.html">Home</a>
 			<a href="">About</a>
-			<a href="">Experiences</a>
+			<a href="#">Experiences</a>
 			<a href="">Plan</a>
 			<a href="">Top users</a>
 			<nav id='log-sign-in-menu'>
@@ -59,27 +59,33 @@
 			</div>
 		</nav>
 		<section id="experiences">
-			<article class="experience-r experience col-11">
-				<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
-				<div class="col-7">
-					<h3>Sacred Moneky Forest - Bali</h3>
-					<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
-				</div>
-			</article>
-			<article class="experience-l experience col-11">
-				<div class="col-7">
-					<h3>City tour - Prague</h3>
-					<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
-				</div>
-				<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
-			</article>
-			<article class="experience-r experience col-11">
-				<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
-				<div class="col-7">
-					<h3>Trip to the Cies Islands - Vigo</h3>
-					<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
-				</div>
-			</article>
+			<a href="">
+				<article class="experience-r experience col-11">
+					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
+					<div class="col-7">
+						<h3>Sacred Moneky Forest - Bali</h3>
+						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
+					</div>
+				</article>
+			</a>
+			<a href="">
+				<article class="experience-l experience col-11">
+					<div class="col-7">
+						<h3>City tour - Prague</h3>
+						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
+					</div>
+					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
+				</article>
+			</a>
+			<a href="experience.html">
+				<article id='cies-exp' class="experience-r experience col-11">
+					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
+					<div class="col-7">
+						<h3>Trip to the Cies Islands - Vigo</h3>
+						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
+					</div>
+				</article>
+			</a>
 		</section>
 	</section>
 	<!-- FOOTER -->
