--- a/top_users.html
+++ b/top_users.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style/index.css">
+	<link rel="stylesheet" href="style/top_users.css">
 	<title>Travelust</title>
 </head>
 <body>
@@ -22,11 +22,11 @@
 			</nav>
 		</div>	
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
-			<a href="#">Home</a>
+			<a href="index.html">Home</a>
 			<a href="">About</a>
 			<a href="last_experiences.html">Experiences</a>
 			<a href="">Plan</a>
-			<a href="">Top users</a>
+			<a href="#">Top users</a>
 			<nav id='log-sign-in-menu'>
 				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
@@ -37,10 +37,48 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>	
 	</header>
-	<section>
-		<p>khkshkhkjsh</p>
+	<section class="col-s-12">
+		<h1>Top Users</h1>
+		<article class="user col-s-8 col-t-10">
+			<h3 class="col-s-6 col-t-4">1.</h3>
+			<div class="col-s-6 col-t-4">
+				<img class="pfp" src="images/default_pfp.png">
+				<p>Name</p>
+			</div>
+			<div class="col-s-12 col-t-4">
+				<p>43 likes</p>
+				<p>8 experiences</p>
+			</div>
+			<img class="col-s-11 col-t-5 img1" src="images/user1_1.png">
+			<img class="col-s-11 col-t-5 img2" src="images/user1_2.png">
+		</article>
+		<article class="user col-s-8 col-t-10">
+			<h3 class="col-s-6 col-t-4">2.</h3>
+			<div class="col-s-6 col-t-4">
+				<img class="pfp" src="images/default_pfp.png">
+				<p>Name</p>
+			</div>
+			<div class="col-s-12 col-t-4">
+				<p>32 likes</p>
+				<p>9 experiences</p>
+			</div>
+			<img class="col-s-11 col-t-5 img1" src="images/user2_1.png">
+			<img class="col-s-11 col-t-5 img2" src="images/user2_2.png">
+		</article>
+		<article class="user col-s-8 col-t-10">
+			<h3 class="col-s-6 col-t-4">3.</h3>
+			<div class="col-s-6 col-t-4">
+				<img class="pfp" src="images/default_pfp.png">
+				<p>Name</p>
+			</div>
+			<div class="col-s-12 col-t-4">
+				<p>27 likes</p>
+				<p>6 experiences</p>
+			</div>
+			<img class="col-s-11 col-t-5 img1" src="images/user3_1.png">
+			<img class="col-s-11 col-t-5 img2" src="images/user3_2.png">
+		</article>
 	</section>
-
 	<footer class="clearfix">
 		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
 			<img id='footer-logo' src="images/logo.png">
