--- a/experience.html
+++ b/experience.html
@@ -23,9 +23,9 @@
 			</nav>
 		</div>	
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
-			<a href="#">Home</a>
+			<a href="index.html">Home</a>
 			<a href="">About</a>
-			<a href="">Experiences</a>
+			<a href="last_experiences.html">Experiences</a>
 			<a href="">Plan</a>
 			<a href="">Top users</a>
 			<nav id='log-sign-in-menu'>
