--- a/last_experiences.html
+++ b/last_experiences.html
@@ -25,8 +25,8 @@
 			<a href="index.html">Home</a>
 			<a href="">About</a>
 			<a href="#">Experiences</a>
-			<a href="">Plan</a>
-			<a href="">Top users</a>
+			<a href="plan.html">Plan</a>
+			<a href="top_users.html">Top users</a>
 			<nav id='log-sign-in-menu'>
 				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
