--- a/last_experiences.html
+++ b/last_experiences.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/last_experiences.css">
+	<link rel="stylesheet" href="style/common.css">
 	<title>Travelust</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
 				<button class="col-t-5" id='sign-btn'>Sign up</button>
 				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 			</nav>
-		</div>	
+		</div>
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
 			<a href="index.html">Home</a>
 			<a href="">About</a>
@@ -35,7 +36,7 @@
 		<nav id='search-bar' class='col-t-3 col-4'>
 			<input type="text" id='search-input' name="search-input">
 			<img id='search-lupa' src="images/search_lupa.png">
-		</nav>	
+		</nav>
 	</header>
 	<!-- MAIN SECTION -->
 	<section id="main-section">
