--- a/plan.html
+++ b/plan.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/plan.css">
+	<link rel="stylesheet" href="style/common.css">
 	<title>Travelust</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
 		<nav id='search-bar' class='col-t-3 col-4'>
 			<input type="text" id='search-input' name="search-input">
 			<img id='search-lupa' src="images/search_lupa.png">
-		</nav>	
+		</nav>
 	</header>
 	<section>
 		<h1>Planning</h1>
