--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style/index.css">
 	<link rel="stylesheet" href="style/common.css">
 	<title>Travelust</title>
 </head>
@@ -26,8 +25,8 @@
 			<a href="#">Home</a>
 			<a href="">About</a>
 			<a href="last_experiences.html">Experiences</a>
-			<a href="plan.html">Plan</a>
-			<a href="top_users.html">Top users</a>
+			<a href="">Plan</a>
+			<a href="">Top users</a>
 			<nav id='log-sign-in-menu'>
 				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
@@ -38,28 +37,26 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
 	</header>
-	<section>
-		<a href="last_experiences.html">profile</a>
-	</section>
+  <section>
+    <div>
+      <img src="images/default_pfp" alt="default profile picture">
+    </div>
+  </section>
+  <footer class="clearfix">
+    <div id='footer-main' class='col-t-12 col-s-12 col-12'>
+      <img id='footer-logo' src="images/logo.png">
+      <h2 class='col-s-5' id='footer-title'>Travelust</h2>
+    </div>
 
-	<footer class="clearfix">
-		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
-			<img id='footer-logo' src="images/logo.png">
-			<h2 class='col-s-5' id='footer-title'>Travelust</h2>
-		</div>
+    <div id="footer-text" class='col-t-12 col-s-12 col-12'>
+      <p id="footer c">© 2021 Travelust</p>
+      <p id="privacy button">Privacy policy</p>
+    </div>
 
-		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
-			<p id="footer c">© 2021 Travelust</p>
-			<p id="privacy button">Privacy policy</p>
-		</div>
-
-		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
-			<img class="images-app" src="images/youtube%202.png">
-			<img class=" images-app" src="images/twitter%201.png">
-			<img class="images-app" src="images/instagram%202.png">
-		</div>
-	</footer>
-
-</body>
-<script src="script/index.js"></script>
+    <div id="footer-images" class='col-t-16 col-s-16 col-16'>
+      <img class="images-app" src="images/youtube%202.png">
+      <img class=" images-app" src="images/twitter%201.png">
+      <img class="images-app" src="images/instagram%202.png">
+    </div>
+  </footer>
 </html>
