--- a/last_experiences.html
+++ b/last_experiences.html
@@ -7,8 +7,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style/last_experiences.css">
 	<link rel="stylesheet" href="style/common.css">
+	<link rel="stylesheet" href="style/last_experiences.css">
 	<title>Travelust</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
 	<section id="main-section">
 		<h1>Last Experiences</h1>
 		<nav id="filter-bar" class=" col-s-10 col-t-8 col-4">
-			<h5 class="col-s-2">filter</h5>
+			<p class="col-s-2">filter</p>
 			<!-- <img class="col-s-1" src="images/filter icon.png"> -->
 			<div class="col-s-10">
 				<input type="text" id="filter-input" class="col-s-10" name="filter-input">
