--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/common.css">
-  <link rel="stylesheet" href="style/index.css">
+	<link rel="stylesheet" href="style/profile.css">
 	<title>Travelust</title>
 </head>
 <body>
@@ -37,15 +37,60 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
 	</header>
-  <section>
-    <div>
-      <img src="images/default_pfp" alt="default profile picture">
+  <section id="main-sect" class="col-12">
+    <div id="profile" class="col-10 col-s-10">
+      <img src="images/default_pfp.png" alt="default profile picture" id="pfp">
+			<button type="button" name="change-pfp" class="button-profile not-bot col-s-10">Change profile picture</button>
+			<div id="profile-data">
+				<article class="profile-art">
+					<p>
+						Name: <br>
+						Username: <br>
+						Email: <br>
+						Date of birth: <br>
+						<br id="br-interests">
+						Interests:
+					</p>
+					<button type="button" name="change-interests" class="button-profile">Modify profile</button>
+				</article>
+				<article class="profile-art">
+					<p>
+						Default name <br>
+						Default username <br>
+						Default email <br>
+						Default date of birth <br>
+					</p>
+					<div id="interests">
+						<div class="column">
+							<div class="interest">
+								<a href="#">Interest 1</a>
+							</div>
+							<div class="interest">
+								<a href="#">Interest 2</a>
+							</div>
+							<div class="interest">
+								<a href="#">Interest 3</a>
+							</div>
+						</div>
+						<div class="column">
+							<div class="interest">
+								<a href="#">Interest 4</a>
+							</div>
+							<div class="interest">
+								<a href="#">Interest 5</a>
+							</div>
+						</div>
+					</div>
+					<button type="button" name="modify-profile" class="button-profile">Change interests</button>
+				</article>
+			</div>
+			<button type="button" name="experiences" class="button-profile not-bot">My Experiences</button>
     </div>
   </section>
   <footer class="clearfix">
     <div id='footer-main' class='col-t-12 col-s-12 col-12'>
       <img id='footer-logo' src="images/logo.png">
-      <h2 class='col-s-5' id='footer-title'>Travelust</h2>
+      <h2 class='col-s-5 col-2' id='footer-title'>Travelust</h2>
     </div>
 
     <div id="footer-text" class='col-t-12 col-s-12 col-12'>
