--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
 		</div>
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
 			<a href="index.html">Home</a>
-			<a href="">About</a>
+			<a href="about_us.html">About</a>
 			<a href="last_experiences.html">Experiences</a>
 			<a href="plan.html">Plan</a>
 			<a href="top_users.html">Top users</a>
