--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
 		</div>
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
 			<a href="#">Home</a>
-			<a href="">About</a>
+			<a href="about_us.html">About</a>
 			<a href="last_experiences.html">Experiences</a>
 			<a href="">Plan</a>
 			<a href="">Top users</a>
