footer + main + experience + about us

--- a/about_us.html
+++ b/about_us.html
@@ -63,34 +63,35 @@
             <img id='search-lupa' src="images/search_lupa.png">
         </nav>
     </header>
-    <section class="clearfix_about">
 
+    <section class="clearfix_about">
         <h1>About us</h1>
-        <p id="about-text">We are a Professional trips Platform. Here we will provide you only with interesting content,. We're dedicated to providing you the best of ideas for planing your trips with a focus on dependability and sharing your ideas.. We're working to turn our passion for trips into a booming online website.and  social website We hope you enjoy traveling as much as we enjoy offering this tool to you.
+        <img id='image_about' class="col-t-12 col-s-12 col-5" src="images/about_us.png">
+        <p id="about-text" >We are a Professional trips Platform. Here we will provide you only with interesting content,. We're dedicated to providing you the best of ideas for planing your trips with a focus on dependability and sharing your ideas.. We're working to turn our passion for trips into a booming online website.and  social website We hope you enjoy traveling as much as we enjoy offering this tool to you.
             We will keep posting more important posts on my Website for all of you. Please give your support and love.
             Thanks For Visiting Our Site
             Have a nice day !</p>
-        <img id='image_about' src="images/about_us.png">
-
     </section>
 
+    <!-- ----------FOOTER----------- -->
     <footer class="clearfix">
-        <div id='footer-main' class='col-t-12 col-s-12 col-12'>
+        <div id='footer-main' class='col-t-8 col-s-12 col-3'>
             <img id='footer-logo' src="images/logo.png">
-            <h2 class='col-s-5' id='footer-title'>Travelust</h2>
+            <h2 id='footer-title'>Travelust</h2>
         </div>
 
-        <div id="footer-text" class='col-t-12 col-s-12 col-12'>
-            <p id="footer c">© 2021 Travelust</p>
-            <p id="privacy button">Privacy policy</p>
+        <div id="footer-text" class='col-t-8 col-s-12'>
+            <div id="footer c">© 2021 Travelust</div>
+            <a href="privacy_policy.html">Privacy policy</a>
         </div>
 
-        <div id="footer-images" class='col-t-16 col-s-16 col-16'>
-            <img class="images-app" src="images/youtube%202.png">
-            <img class=" images-app" src="images/twitter%201.png">
-            <img class="images-app" src="images/instagram%202.png">
+        <div id="footer-images" class='col-t-4 col-s-16 col-3'>
+            <a href=""><img src="images/youtube%202.png"></a>
+            <a href=""><img src="images/twitter%201.png"></a>
+            <a href=""><img src="images/instagram%202.png"></a>
         </div>
     </footer>
+    <!-- ----------END FOOTER----------- -->
 </body>
 
 </html>
