--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<title>Travelust</title>
 </head>
 <body>
+	<!-- ----------HEADER----------- -->
 	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
@@ -62,7 +63,11 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
 	</header>
+	<!-- ----------END HEADER----------- -->
+
+	<!-- ----------MAP SECTION----------- -->
 	<section>
+		<h1>Welcome to our website</h1>
 		<div class="col-12 col-s-12 col-t-12" id="map-div">
 		<?xml version="1.0"?>
 			<svg baseprofile="tiny" fill="#ececec" height="100%" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".2" version="1.2" viewbox="0 0 2200 857" width="100%" xmlns="http://www.w3.org/2000/svg" id="map-svg">
@@ -948,27 +953,64 @@
 			 </circle>
 			 <circle cx="1798.2" cy="719.3" id="2">
 			 </circle>
-		</svg>
-	</div>
+			</svg>
+		</div>
 	</section>
+	<!-- ----------END MAP SECTION----------- -->
 
+	<!-- ----------TOP EXPERIENCES SECTION----------- -->
+	<section>
+		<h1>Top experiences</h1>
+		<section id="experiences">
+			<a href="experience_bali.html">
+				<article class="experience-r experience col-11">
+					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
+					<div class="col-7">
+						<h3>Bali</h3>
+						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
+					</div>
+				</article>
+			</a>
+			<a href="experience_prague.html">
+				<article class="experience-l experience col-11">
+					<div class="col-7">
+						<h3>Prague</h3>
+						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
+					</div>
+					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
+				</article>
+			</a>
+			<a href="experience_cies.html">
+				<article id='cies-exp' class="experience-r experience col-11">
+					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
+					<div class="col-7">
+						<h3>Cies Islands</h3>
+						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
+					</div>
+				</article>
+			</a>
+		</section>
+	</section>
+	<!-- ----------END TOP EXPERIENCES SECTION----------- -->
+
+	<!-- ----------FOOTER----------- -->
 	<footer class="clearfix">
-		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
+		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png">
-			<h2 class='col-s-5' id='footer-title'>Travelust</h2>
+			<h2 id='footer-title'>Travelust</h2>
 		</div>
 
-		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
-			<p id="footer c">© 2021 Travelust</p>
-			<p id="privacy button">Privacy policy</p>
+		<div id="footer-text" class='col-t-8 col-s-12'>
+			<div id="footer c">© 2021 Travelust</div>
+			<a href="privacy_policy.html">Privacy policy</a>
 		</div>
 
-		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
-			<img class="images-app" src="images/youtube%202.png">
-			<img class=" images-app" src="images/twitter%201.png">
-			<img class="images-app" src="images/instagram%202.png">
+		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
+			<a href=""><img src="images/youtube%202.png"></a>
+			<a href=""><img src="images/twitter%201.png"></a>
+			<a href=""><img src="images/instagram%202.png"></a>
 		</div>
 	</footer>
-
+	<!-- ----------END FOOTER----------- -->
 </body>
 </html>
