--- a/last_experiences.html
+++ b/last_experiences.html
@@ -59,8 +59,8 @@
 				<button class="delete-filter">x</button>
 			</div>
 		</nav>
-		<section id="experiences">
-			<a href="">
+		<section class="experiences">
+			<a href="experience_bali.html">
 				<article class="experience-r experience col-11">
 					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
 					<div class="col-7">
@@ -69,7 +69,7 @@
 					</div>
 				</article>
 			</a>
-			<a href="">
+			<a href="experience_prague.html">
 				<article class="experience-l experience col-11">
 					<div class="col-7">
 						<h3>City tour - Prague</h3>
@@ -78,7 +78,7 @@
 					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
 				</article>
 			</a>
-			<a href="experience.html">
+			<a href="experience_cies.html">
 				<article id='cies-exp' class="experience-r experience col-11">
 					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
 					<div class="col-7">
@@ -89,24 +89,25 @@
 			</a>
 		</section>
 	</section>
-	<!-- FOOTER -->
+	<!-- ----------FOOTER----------- -->
 	<footer class="clearfix">
-		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
+		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png">
-			<h2 class='col-s-5' id='footer-title'>Travelust</h2>
+			<h2 id='footer-title'>Travelust</h2>
 		</div>
 
-		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
-			<p id="footer c">© 2021 Travelust</p>
-			<p id="privacy button">Privacy policy</p>
+		<div id="footer-text" class='col-t-8 col-s-12'>
+			<div id="footer c">© 2021 Travelust</div>
+			<a href="privacy_policy.html">Privacy policy</a>
 		</div>
 
-		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
-			<img class="images-app" src="images/youtube%202.png">
-			<img class=" images-app" src="images/twitter%201.png">
-			<img class="images-app" src="images/instagram%202.png">
+		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
+			<a href=""><img src="images/youtube%202.png"></a>
+			<a href=""><img src="images/twitter%201.png"></a>
+			<a href=""><img src="images/instagram%202.png"></a>
 		</div>
 	</footer>
+	<!-- ----------END FOOTER----------- -->
 </body>
 <script src="script/index.js"></script>
 </html>
