--- a/plan.html
+++ b/plan.html
@@ -67,23 +67,25 @@
 			<input class="col-s-10 col-8" type="text" name="destination" class="col-s-10">
 		</article>
 	</section>
+	<!-- ----------FOOTER----------- -->
 	<footer class="clearfix">
-		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
+		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png">
-			<h2 class='col-s-5' id='footer-title'>Travelust</h2>
+			<h2 id='footer-title'>Travelust</h2>
 		</div>
 
-		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
-			<p id="footer c">© 2021 Travelust</p>
-			<p id="privacy button">Privacy policy</p>
+		<div id="footer-text" class='col-t-8 col-s-12'>
+			<div id="footer c">© 2021 Travelust</div>
+			<a href="privacy_policy.html">Privacy policy</a>
 		</div>
 
-		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
-			<img class="images-app" src="images/youtube%202.png">
-			<img class=" images-app" src="images/twitter%201.png">
-			<img class="images-app" src="images/instagram%202.png">
+		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
+			<a href=""><img src="images/youtube%202.png"></a>
+			<a href=""><img src="images/twitter%201.png"></a>
+			<a href=""><img src="images/instagram%202.png"></a>
 		</div>
 	</footer>
+	<!-- ----------END FOOTER----------- -->
 
 </body>
 <script src="script/index.js"></script>
