--- a/profile.html
+++ b/profile.html
@@ -37,9 +37,9 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
 	</header>
-  <section id="main-sect" class="col-12">
-    <div id="profile" class="col-10 col-s-10">
-      <img src="images/default_pfp.png" alt="default profile picture" id="pfp">
+	<section id="main-sect" class="col-12">
+	<div id="profile" class="col-10 col-s-10">
+	  <img src="images/default_pfp.png" alt="default profile picture" id="pfp">
 			<button type="button" name="change-pfp" class="button-profile not-bot col-s-10">Change profile picture</button>
 			<div id="profile-data">
 				<article class="profile-art">
@@ -85,23 +85,26 @@
 				</article>
 			</div>
 			<button type="button" name="experiences" class="button-profile not-bot">My Experiences</button>
-    </div>
-  </section>
-  <footer class="clearfix">
-    <div id='footer-main' class='col-t-12 col-s-12 col-12'>
-      <img id='footer-logo' src="images/logo.png">
-      <h2 class='col-s-5 col-2' id='footer-title'>Travelust</h2>
-    </div>
+	</div>
+	</section>
+	<!-- ----------FOOTER----------- -->
+	<footer class="clearfix">
+		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
+			<img id='footer-logo' src="images/logo.png">
+			<h2 id='footer-title'>Travelust</h2>
+		</div>
 
-    <div id="footer-text" class='col-t-12 col-s-12 col-12'>
-      <p id="footer c">© 2021 Travelust</p>
-      <p id="privacy button">Privacy policy</p>
-    </div>
+		<div id="footer-text" class='col-t-8 col-s-12'>
+			<div id="footer c">© 2021 Travelust</div>
+			<a href="privacy_policy.html">Privacy policy</a>
+		</div>
 
-    <div id="footer-images" class='col-t-16 col-s-16 col-16'>
-      <img class="images-app" src="images/youtube%202.png">
-      <img class=" images-app" src="images/twitter%201.png">
-      <img class="images-app" src="images/instagram%202.png">
-    </div>
-  </footer>
+		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
+			<a href=""><img src="images/youtube%202.png"></a>
+			<a href=""><img src="images/twitter%201.png"></a>
+			<a href=""><img src="images/instagram%202.png"></a>
+		</div>
+	</footer>
+	<!-- ----------END FOOTER----------- -->
+</body>
 </html>
